# CUDA_benchmark

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/cudabench/: cpu_reference.h  cuda_kernels.h
python/: plot_results.py
scripts/: nsight_profile_example.sh
src/: convolution.cu  cpu_reference.cpp  main.cpp  matrix_mul.cu  reduction.cu
tests/: test_cpu_reference.cpp
